@@ -898,6 +898,7 @@ extern void CommandAccept( char * ),
     CommandSetSoundSoundBotDance ( char * ),
     CommandSetSoundSoundBotWinGame ( char * ),
     CommandSetSoundSoundBotWinMatch ( char * ),
+    CommandSetSoundSoundChequer ( char * ),
     CommandSetSoundSoundDouble ( char * ),
     CommandSetSoundSoundDrop ( char * ),
     CommandSetSoundSoundExit ( char * ),
